added background to toplevel.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -725,6 +725,7 @@ body #grid * {
 // This creates an ancestor for .feature-flag to be absolute positioned
 // against.
 .sidebar-box {
+  background: @black1;
   position: relative;
   z-index: 10;
   &.dragging {
