--- a/server/static/base.less
+++ b/server/static/base.less
@@ -85,6 +85,9 @@ body #grid * {
   bottom: 0;
   left: 0px;
   position: absolute;
+  z-index: 20;
+  width: 100%;
+  background-color: @black1;
 
   .specialButton {
     margin-right: 4px;
