Partial revert of 922a7c1b

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -395,6 +395,10 @@ body #grid * {
   font-style: italic;
   font-size: 8pt;
   text-align: center;
+  padding-left: 1ch;
+  padding-right: 1ch;
+  margin-left: 4px;
+  margin-right: 4px;
 }
 
 .layout-block() {
