--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -23,13 +23,18 @@
 
     <script type="text/javascript">
       function stopKeys(event) {
-        if (event.keyCode == 9 // Tab
+        if (
+            event.keyCode == 9 // Tab
          || event.keyCode == 32 // Space
-         || event.keyCode == 38) // Up
-        {
-          event.preventDefault();
+         ) {
+           event.preventDefault();
         }
-
+        if (
+            event.keyCode == 38 // Up
+         || event.keyCode == 40 // Down
+         ) {
+           if (document.activeElement.tagName.toLowerCase() !== 'textarea') event.preventDefault();
+        }
       }
     </script>
     <script type="text/javascript" src="/static/bundle.js"> </script>
