move feature flag computed value to right hand side.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -898,6 +898,12 @@ body #grid * {
     &.flag-right {
       margin-top: 50px;
     }
+    .computed-value {
+      &:before {
+        left: 165%;
+        right: auto;
+      }
+    }
   }
 
 }
