--- a/server/static/base.less
+++ b/server/static/base.less
@@ -315,7 +315,7 @@ body #grid * {
     flex-direction: row;
     margin-bottom: 4px;
     margin-top: 4px;
-    text-align: center;
+    text-align: left;
 
     .name, .type {
       flex: 1;
@@ -361,15 +361,40 @@ body #grid * {
   .col {
     display: flex;
     flex-direction: row;
+    margin-bottom: 4px;
+    margin-top: 4px;
     text-align: center;
 
     .name, .type {
       flex: 1;
+      font-size: 10px;
+      height: 15px;
+      margin-left: 4px;
+      margin-right: 4px;
+      padding-left: 1ch;
+      padding-right: 1ch;
+      #search-container {
+        font-size: 10px;
+        height: 10px;
+        margin-bottom: -1px;
+        margin-left: -6px;
+        min-width: calc(~"100% + 12px");
+        padding-bottom: 5px;
+      }
+
       &.blank {
-        width: 96; // put it all on one line
+        height: 15px;
+      }
+      .entry {
+        background: transparent;
+        // Don't center text-entry, it makes everything weird
+        text-align: left;
+        form {
+          margin-top: 0;
+          position: relative;
+        }
       }
     }
-
   }
 }
 
