Update to fontawesome 5

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -7,8 +7,9 @@
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <link rel="stylesheet"
-          type="text/css"
-          href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" >
+          href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+          integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+          crossorigin="anonymous">
     <link rel="stylesheet"
           href="https://cdn.rawgit.com/tonsky/FiraCode/1.204/distr/fira_code.css">
     <link rel="stylesheet"
