Show nested expressions which have non-incomplete values as livevalues

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -888,7 +888,7 @@ body #grid * {
     .value-error & {
       outline: 0.4px red dotted;
     }
-    .incomplete & {
+    .incomplete > & {
       visibility: hidden;
     }
     content: attr(computed-value);
