Extract message body from errors whicj are JSONified exceptions

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -99,7 +99,11 @@ body #grid * {
 
 #status {
   &.error {
-    color: red;
+    color: @yellow;
+    i.fa {
+      padding-left: 10px;
+      color: @red;
+    }
   }
 }
 
