Separate spaces in the routing table

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -219,12 +219,10 @@ body #grid * {
   .header {
     width: 300px;
     color: @orange;
-    padding-bottom: 8px;
-    margin-bottom: 8px;
-    border-bottom: 2px @white3 solid;
 
     .title {
       margin-right: 5px;
+      padding-bottom: 6px;
     }
     .count {
       font-weight: bold;
@@ -247,11 +245,11 @@ body #grid * {
     }
   }
 
-  .http-routes {
+  .routing-section {
     .routes {
       padding-bottom: 8px;
       margin-bottom: 8px;
-      border-bottom: 2px @purple solid;
+      border-bottom: 1px @white1 solid;
     }
 
     .handler {
