Get DBs showing
(refactoring next)

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -241,7 +241,7 @@ body #grid * {
   }
 
   .routing-section {
-    .routes {
+    .routes, .dbs {
       padding-bottom: 8px;
       margin-bottom: 8px;
       border-bottom: 1px @white1 solid;
