Fix CSS for DBs in the routing table

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -247,7 +247,7 @@ body #grid * {
       border-bottom: 1px @white1 solid;
     }
 
-    .handler {
+    .handler, .db-route {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
