bug fixes for inserting space in string inputs at the correct place :D

--- a/server/templates/ui.html
+++ b/server/templates/ui.html
@@ -24,10 +24,11 @@
 
     <script type="text/javascript">
       function stopKeys(event) {
-        if (
-            event.keyCode == 9 // Tab
-         || event.keyCode == 32 // Space
-         ) {
+        if (event.keyCode == 9) { // Tab
+           event.preventDefault();
+        }
+        if (event.keyCode == 32 // Space
+          && event.target.parentNode.className != "string-container") {
            event.preventDefault();
         }
         if (
