Make omnicomplete entry text the same size as within handlers.
Removes the weird two-line behaviour when the text is too big, which throws off scrolling.

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -719,7 +719,7 @@ body #grid * {
     }
   }
   #autocomplete-holder {
-    font-size: 85%;
+    font-size: 11.3px;
     max-height: 90px;
     overflow-y: scroll;
     position: absolute;
