Apporoximate the width of an expression

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -637,6 +637,11 @@ body #grid * {
       }
     }
   }
+
+  // useful while working on wideness
+  /* .too-wide { */
+  /*   background-color: @green !important; */
+  /* } */
 }
 
 /********************
