--- a/server/static/base.less
+++ b/server/static/base.less
@@ -557,24 +557,38 @@ body #grid * {
     color: @green;
   }
 
-  .execution-button {
-    position: absolute;
-    font-size: 60%;
-    &:hover {
-      font-size: 100%;
-      font-weight: strong;
-      margin-left: -6px;
-      margin-top: -3px;
+  .fncall {
+    .arg-on-new-line {
+      .layout-block;
+      &::before {
+        content: attr(param-name);
+        width: auto;
+        position: absolute;
+        right: calc(~"100% - 10ch");
+        color: @grey2;
+        font-size: 85%;
+      }
     }
-    margin-left: -4px;
-    &.execution-button-unavailable {
-      color: grey;
-    }
-    &.execution-button-needed {
-      color: green;
-    }
-    &.execution-button-repeat {
-      color: green;
+
+    .execution-button {
+      position: absolute;
+      font-size: 60%;
+      &:hover {
+        font-size: 100%;
+        font-weight: strong;
+        margin-left: -6px;
+        margin-top: -3px;
+      }
+      margin-left: -4px;
+      &.execution-button-unavailable {
+        color: grey;
+      }
+      &.execution-button-needed {
+        color: green;
+      }
+      &.execution-button-repeat {
+        color: green;
+      }
     }
   }
 
