Don't use details when there's no contents

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -217,6 +217,9 @@ body #grid * {
         font-weight: bold;
       }
     }
+    &.empty .header {
+      color: @grey3;
+    }
 
     .verb-link {
       &:hover {
