Add hyphen in the empty case to indicate its disabled.
the spacing is a little off because the list-item for html
details has weird spacing but oh well

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -218,7 +218,10 @@ body #grid * {
       }
     }
     &.empty .header {
-      color: @grey3;
+      &::before {
+        content: "- ";
+        font-weight: bold;
+      }
     }
 
     .verb-link {
