Start to show the migration UI

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -342,6 +342,14 @@ body #grid * {
         text-align: left;
       }
     }
+    .migration-view {
+      position: absolute;
+      width: max-content;
+      left: calc(~"100% + 6px");
+      .default;
+    }
+
+
   }
 }
 
