--- a/client/src/styles/_sidebar.scss
+++ b/client/src/styles/_sidebar.scss
@@ -66,6 +66,98 @@ $prodColor: black;
     }
   }
 
+  .settings {
+    &:not(.collapsed) {
+      margin-top: 10px;
+      margin-left: 10px;
+
+      .header-icon {
+        color: lighten($yellow, 10%);
+
+        &:after {
+          content: "Admin";
+          margin-left: 10px;
+        }
+      }
+      .environment {
+        display: none;
+      }
+
+      .setting-state {
+        display: block;
+        margin-top: 10px;
+        margin-left: 16px;
+      }
+    }
+
+    div.setting-state {
+      padding: 5px 0px;
+      color: $grey3;
+      font-size: 13px;
+      a {
+        color: $grey3;
+      }
+      .checkbox-row {
+        display: flex;
+        align-items: center;
+        height: 20px;
+        cursor: pointer;
+        input {
+          cursor: pointer;
+        }
+        p {
+          margin-left: 5px;
+        }
+      }
+      .state-info {
+        display: flex;
+        flex-direction: column;
+        margin-bottom: 10px;
+        .state-info-row {
+          margin-top: 0px;
+          margin-bottom: 0px;
+        }
+      }
+      .state-info-row {
+        display: flex;
+        height: 20px;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 5px;
+        margin-left: 17px;
+
+        &.debugger:hover {
+          color: $white3;
+        }
+
+        .key {
+        }
+        .sep {
+          width: 15px;
+        }
+        .value {
+          white-space: nowrap;
+          max-width: 210px;
+        }
+
+        &.state-button {
+          border: 1px solid;
+          border-radius: 2px;
+          padding: 4px 8px;
+          height: 10px;
+          margin-bottom: 10px;
+          width: fit-content;
+          cursor: pointer;
+
+          &:hover {
+            background: $grey3;
+            color: darken($canvas-background, 10%);
+          }
+        }
+      }
+    }
+  }
+
   .groups {
     display: flex;
     flex-direction: column;
@@ -88,10 +180,61 @@ $prodColor: black;
       padding: 15px 5px;
       color: $grey2;
       width: 100%;
+
       &.deleted.empty {
         // Dont show trash can if it's empty
         display: none;
       }
+
+      &:hover {
+        .hover {
+          display: flex;
+          flex-direction: column;
+
+          position: absolute;
+          left: $sidebarClosedWidth;
+
+          width: 300px;
+          max-height: 400px;
+          padding: 10px;
+          margin-top: 10px;
+
+          overflow-y: scroll;
+
+          background-color: darken($canvas-background, 10%);
+          box-shadow: $sidebard-preview-shadow;
+
+          .header-icon {
+            display: none;
+          }
+
+          .GET a.external {
+            font-size: 12px;
+          }
+        }
+      }
+      
+      .hover {
+        display: none;
+      }
+
+      &.settings {
+        margin-top: 0;
+      }
+
+      &.settings .collapsed-icon {
+        margin-left: 5px;
+
+        .header-icon {
+          margin-top: 0;
+          margin-left: 0;
+        }
+      }
+
+      &.settings.is-admin > .collapsed-icon > .environment {
+        display: flex;
+      }
+
       .collapsed-icon {
         display: flex;
         align-items: center;
@@ -101,7 +244,7 @@ $prodColor: black;
         height: auto;
         .environment {
           height: max-content;
-          display: flex;
+          display: none;
           left: 10%;
           position: absolute;
           z-index: 2;
@@ -201,104 +344,6 @@ $prodColor: black;
           color: $prodColor;
           filter: none;
         }
-      }
-
-      &:hover {
-        .hover {
-          display: flex;
-          flex-direction: column;
-
-          position: absolute;
-          left: $sidebarClosedWidth;
-
-          width: 300px;
-          max-height: 400px;
-          padding: 10px;
-          margin-top: 10px;
-
-          overflow-y: scroll;
-
-          background-color: darken($canvas-background, 10%);
-          box-shadow: $sidebard-preview-shadow;
-
-          .header-icon {
-            display: none;
-          }
-
-          .GET a.external {
-            font-size: 12px;
-          }
-
-          &.admin-state {
-            padding: 5px 0px;
-            color: $grey3;
-            font-size: 13px;
-            a {
-              color: $grey3;
-            }
-            .checkbox-row {
-              display: flex;
-              align-items: center;
-              height: 20px;
-              cursor: pointer;
-              input {
-                cursor: pointer;
-              }
-              p {
-                margin-left: 5px;
-              }
-            }
-            .state-info {
-              display: flex;
-              flex-direction: column;
-              margin-bottom: 10px;
-              .state-info-row {
-                margin-top: 0px;
-                margin-bottom: 0px;
-              }
-            }
-            .state-info-row {
-              display: flex;
-              height: 20px;
-              align-items: center;
-              justify-content: flex-start;
-              margin: 5px;
-              margin-left: 17px;
-
-              &.debugger:hover {
-                color: $white3;
-              }
-
-              &.save-state {
-                border: 1px solid;
-                border-radius: 2px;
-                padding: 4px 8px;
-                height: 10px;
-                margin-bottom: 20px;
-                width: fit-content;
-                cursor: pointer;
-
-                &:hover {
-                  background: $grey3;
-                  color: darken($canvas-background, 10%);
-                }
-              }
-
-              .key {
-              }
-              .sep {
-                width: 15px;
-              }
-              .value {
-                white-space: nowrap;
-                max-width: 210px;
-              }
-            }
-          }
-        }
-      }
-      .hover {
-        display: none;
       }
     }
   }
@@ -540,7 +585,7 @@ $prodColor: black;
     }
     .header {
       padding-left: 0px;
-      margin: 0px 5px 0px 10px;
+      margin-left: 20px;
       background: none;
       display: flex;
       flex-direction: column;
@@ -554,10 +599,6 @@ $prodColor: black;
   }
   .title {
     align-self: flex-start;
-    border-bottom: 1px solid;
-    .title {
-      border-bottom: none;
-    }
   }
 
   .deploy-status {
