--- a/client/src/styles/_sidebar.scss
+++ b/client/src/styles/_sidebar.scss
@@ -66,98 +66,6 @@ $prodColor: black;
     }
   }
 
-  .settings {
-    &:not(.collapsed) {
-      margin-top: 10px;
-      margin-left: 10px;
-
-      .header-icon {
-        color: lighten($yellow, 10%);
-
-        &:after {
-          content: "Admin";
-          margin-left: 10px;
-        }
-      }
-      .environment {
-        display: none;
-      }
-
-      .setting-state {
-        display: block;
-        margin-top: 10px;
-        margin-left: 16px;
-      }
-    }
-
-    div.setting-state {
-      padding: 5px 0px;
-      color: $grey3;
-      font-size: 13px;
-      a {
-        color: $grey3;
-      }
-      .checkbox-row {
-        display: flex;
-        align-items: center;
-        height: 20px;
-        cursor: pointer;
-        input {
-          cursor: pointer;
-        }
-        p {
-          margin-left: 5px;
-        }
-      }
-      .state-info {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 10px;
-        .state-info-row {
-          margin-top: 0px;
-          margin-bottom: 0px;
-        }
-      }
-      .state-info-row {
-        display: flex;
-        height: 20px;
-        align-items: center;
-        justify-content: flex-start;
-        margin: 5px;
-        margin-left: 17px;
-
-        &.debugger:hover {
-          color: $white3;
-        }
-
-        .key {
-        }
-        .sep {
-          width: 15px;
-        }
-        .value {
-          white-space: nowrap;
-          max-width: 210px;
-        }
-
-        &.state-button {
-          border: 1px solid;
-          border-radius: 2px;
-          padding: 4px 8px;
-          height: 10px;
-          margin-bottom: 10px;
-          width: fit-content;
-          cursor: pointer;
-
-          &:hover {
-            background: $grey3;
-            color: darken($canvas-background, 10%);
-          }
-        }
-      }
-    }
-  }
-
   .groups {
     display: flex;
     flex-direction: column;
@@ -244,7 +152,7 @@ $prodColor: black;
         height: auto;
         .environment {
           height: max-content;
-          display: none;
+          display: flex;
           left: 10%;
           position: absolute;
           z-index: 2;
@@ -344,6 +252,104 @@ $prodColor: black;
           color: $prodColor;
           filter: none;
         }
+      }
+
+      &:hover {
+        .hover {
+          display: flex;
+          flex-direction: column;
+
+          position: absolute;
+          left: $sidebarClosedWidth;
+
+          width: 300px;
+          max-height: 400px;
+          padding: 10px;
+          margin-top: 10px;
+
+          overflow-y: scroll;
+
+          background-color: darken($canvas-background, 10%);
+          box-shadow: $sidebard-preview-shadow;
+
+          .header-icon {
+            display: none;
+          }
+
+          .GET a.external {
+            font-size: 12px;
+          }
+
+          &.admin-state {
+            padding: 5px 0px;
+            color: $grey3;
+            font-size: 13px;
+            a {
+              color: $grey3;
+            }
+            .checkbox-row {
+              display: flex;
+              align-items: center;
+              height: 20px;
+              cursor: pointer;
+              input {
+                cursor: pointer;
+              }
+              p {
+                margin-left: 5px;
+              }
+            }
+            .state-info {
+              display: flex;
+              flex-direction: column;
+              margin-bottom: 10px;
+              .state-info-row {
+                margin-top: 0px;
+                margin-bottom: 0px;
+              }
+            }
+            .state-info-row {
+              display: flex;
+              height: 20px;
+              align-items: center;
+              justify-content: flex-start;
+              margin: 5px;
+              margin-left: 17px;
+
+              &.debugger:hover {
+                color: $white3;
+              }
+
+              &.save-state {
+                border: 1px solid;
+                border-radius: 2px;
+                padding: 4px 8px;
+                height: 10px;
+                margin-bottom: 20px;
+                width: fit-content;
+                cursor: pointer;
+
+                &:hover {
+                  background: $grey3;
+                  color: darken($canvas-background, 10%);
+                }
+              }
+
+              .key {
+              }
+              .sep {
+                width: 15px;
+              }
+              .value {
+                white-space: nowrap;
+                max-width: 210px;
+              }
+            }
+          }
+        }
+      }
+      .hover {
+        display: none;
       }
     }
   }
@@ -585,7 +591,7 @@ $prodColor: black;
     }
     .header {
       padding-left: 0px;
-      margin-left: 20px;
+      margin: 0px 5px 0px 10px;
       background: none;
       display: flex;
       flex-direction: column;
@@ -599,6 +605,10 @@ $prodColor: black;
   }
   .title {
     align-self: flex-start;
+    border-bottom: 1px solid;
+    .title {
+      border-bottom: none;
+    }
   }
 
   .deploy-status {
@@ -629,5 +639,15 @@ $prodColor: black;
   .datetime,
   .hash {
     margin-right: 2ch;
+  }
+}
+
+.account {
+  a.action-link {
+    color: $white2;
+
+    &:hover {
+      color: $yellow;
+    }
   }
 }
