--- a/client/src/styles/_avatar.scss
+++ b/client/src/styles/_avatar.scss
@@ -22,13 +22,18 @@
   overflow-y: scroll;
   position: fixed;
   top: 0;
-  right: 0;
+  right: 80px;
   background-color: $black2;
   margin: 0px 5px;
   padding: 5px 10px;
+  border-bottom-right-radius: 10px;
+  border-bottom-left-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  font-size: 10px;
+  color: $grey3;
 
   p {
     text-align: center;
