No ligatures in strings
By using Fira Mono instead of Fira Code.

https://trello.com/c/7orU1WrH/1693-has-a-nice-ligature-for-threads-but-maybe-we-dont-want-that-in-strings

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -97,6 +97,9 @@ https://github.com/chriskempson/tomorrow-theme */
   }
 
   .fluid-category-string {
+    &:not(.fa) {
+      font-family: "Fira Mono", monospace;
+    }
     white-space: pre;
     color: $string-color;
   }
