--- a/client/src/styles/_avatar.scss
+++ b/client/src/styles/_avatar.scss
@@ -27,13 +27,16 @@
   margin: 0px 5px;
   padding: 5px 10px;
   border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   font-size: 10px;
   color: $grey3;
+
+  &.hide {
+    display: none;
+  }
 
   p {
     text-align: center;
