Add to css to hopefully prevent the scroll back in chrome

--- a/client/src/styles/_canvas.scss
+++ b/client/src/styles/_canvas.scss
@@ -104,6 +104,8 @@ html {
 body {
   @extend .default;
   height: 100%;
+  // Adding this in hopes of fixing the chrome scroll back bug
+  overscroll-behavior-x: none;
 }
 
 #app {
