--- a/client/src/styles/_ast.scss
+++ b/client/src/styles/_ast.scss
@@ -197,12 +197,27 @@ $toplevel-shadow-front: 1px 2px 4px 2px $black1;
     &.complete {
       &:before {
         @include font-awesome("\f00c");
+
         position: absolute;
         left: 0;
         opacity: 1;
 
         /* duration timing-fn delay fill-mode animation-name */
         animation: 0.5s linear 2s forwards fadeOut;
+      }
+
+      &.failed {
+        &:before {
+          @include font-awesome("\f00d");
+          color: $red;
+
+          position: absolute;
+          left: 0;
+          opacity: 1;
+
+          /* duration timing-fn delay fill-mode animation-name */
+          animation: 0.5s linear 2s forwards fadeOut;
+        }
       }
 
       i.fa.fa-redo {
