--- a/client/src/styles/_ast.scss
+++ b/client/src/styles/_ast.scss
@@ -324,14 +324,14 @@ $toplevel-shadow-front: 1px 2px 4px 2px $black1;
   &.Option {
     background-image: url("/icons/option_just.svg");
     &:hover:after {
-      content: "Just x -> x";
+      content: ":take-function-off-rail (x -> Just x)";
     }
 
     &.ErrorRail {
       background-image: url("/icons/option_nothing.svg");
 
       &:hover:after {
-        content: "Nothing -> ErrorRail <Nothing>";
+        content: ":take-function-off-rail ((/) -> Nothing)";
       }
     }
   }
@@ -340,14 +340,14 @@ $toplevel-shadow-front: 1px 2px 4px 2px $black1;
     background-image: url("/icons/result_ok.svg");
 
     &:hover:after {
-      content: "Ok x -> x";
+      content: ":take-function-off-rail (x -> Ok x)";
     }
 
     &.ErrorRail {
       background-image: url("/icons/result_error.svg");
 
       &:hover:after {
-        content: "Error msg -> ErrorRail<Error msg>";
+        content: ":take-function-off-rail ((!) -> Error msg)";
       }
     }
   }
