Add a z-index so error rail is not hidden under references to other handlers

--- a/client/src/styles/_zindex.scss
+++ b/client/src/styles/_zindex.scss
@@ -86,6 +86,13 @@
   z-index: 200;
 }
 
+.error-indicator {
+  &:hover:after {
+    // @extend .tooltip;
+    z-index: 40;
+  }
+}
+
 #debug {
   min-height: 20px;
   z-index: 100;
