--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -257,7 +257,7 @@ since they are essentially both commands just acting upon different things. */
 
   #fluid-dropdown {
     cursor: pointer;
-    background-color: $dropdown-background;
+    background-color: $black3;
     color: $dropdown-foreground;
     z-index: 1000;
     position: absolute;
@@ -279,7 +279,7 @@ since they are essentially both commands just acting upon different things. */
       padding-right: 5px;
 
       .fluid-selected {
-        background-color: $dropdown-selected-background;
+        background-color: $highlight-color;
         color: darken(white, 5%);
       }
 
