Show reference names in blue when hovering on reference to another handler

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -156,7 +156,6 @@ https://github.com/chriskempson/tomorrow-theme */
   .fluid-fn-name,
   .fluid-fn-version {
     color: $white2;
-
     .execution-button {
       position: absolute;
       font-size: 55%;
@@ -197,6 +196,10 @@ https://github.com/chriskempson/tomorrow-theme */
         }
       }
     }
+  }
+
+  .related-change {
+    color: $hover-foreground;
   }
 
   .fluid-partial,
