silly wip for likeable handlers

--- a/client/src/styles/_ast.scss
+++ b/client/src/styles/_ast.scss
@@ -229,6 +229,9 @@ $toplevel-shadow-front: 1px 2px 4px 2px $black1;
     }
   }
 
+  div.likes {
+  }
+
   .modifier {
     div.blankOr,
     div.blank {
