mv btn to queue dots

--- a/client/src/styles/_live-data.scss
+++ b/client/src/styles/_live-data.scss
@@ -54,6 +54,12 @@
     }
   }
 
+  .pause-worker,
+  .restart-worker {
+    margin-top: 4px;
+    color: $queue-color;
+  }
+
   ul.request-cursor {
     float: none;
     margin-top: 10px;
