change font size to fit width

--- a/client/src/styles/_dropdown.scss
+++ b/client/src/styles/_dropdown.scss
@@ -173,7 +173,7 @@ $wrapper-background: $black2;
     @include border-radius-bottom(6px);
 
     li.autocomplete-item {
-      font-size: 1rem;
+      font-size: $code-font-size;
       padding: 2px $left-margin;
 
       &.new-tl + .found-in,
