--- a/client/src/styles/_live-data.scss
+++ b/client/src/styles/_live-data.scss
@@ -1,7 +1,7 @@
 .view-data {
   position: absolute;
   width: max-content;
-  top: 0;
+  top: -16px;
   left: -20px;
   cursor: pointer;
   overflow: hidden;
@@ -63,6 +63,8 @@
   ul.request-cursor {
     float: none;
     margin-top: 10px;
+    position: relative;
+
     li {
       font-size: 30px;
       height: 15px;
