--- a/client/src/styles/_live-data.scss
+++ b/client/src/styles/_live-data.scss
@@ -60,8 +60,8 @@
   }
 
   .blocked-worker {
-    color: $grey2;
-    cursor: not-allowed;
+    color: $queue-color;
+    cursor: default;
   }
 
   ul.request-cursor {
