--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -56,7 +56,7 @@ https://github.com/chriskempson/tomorrow-theme */
   $black: #1d1f21;
   $background: transparent;
   $selected-background: #2d2d2d;
-  $blanks: lighten($toplevel-background, 10%);
+  $blanks: darken($toplevel-background, 20%);
   $currentline: $black3;
   $selection: $grey3;
   $foreground: $white2;
@@ -142,6 +142,14 @@ https://github.com/chriskempson/tomorrow-theme */
   .fluid-empty {
     color: lighten($grey2, 5%);
     background-color: $blanks;
+  }
+
+  .fluid-incomplete, .fluid-empty.fluid-incomplete {
+    background-color: transparent;
+    border: 1px dashed saturate($red, 10%);
+    &.fluid-placeholder {
+      color: darken($red, 10%);
+    }
   }
 
   .fluid-keyword {
