--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -144,14 +144,6 @@ https://github.com/chriskempson/tomorrow-theme */
     background-color: $blanks;
   }
 
-  .fluid-incomplete, .fluid-empty.fluid-incomplete {
-    background-color: transparent;
-    border: 1px dashed saturate($red, 10%);
-    &.fluid-placeholder {
-      color: darken($red, 10%);
-    }
-  }
-
   .fluid-keyword {
     color: $green;
   }
@@ -346,4 +338,12 @@ since they are essentially both commands just acting upon different things. */
 /* Hide non-fluid rail for now until we get rid of non-fluid code */
 .handler-body > .fluid-ast + .rop-rail.active {
   display: none;
+}
+
+.toplevel.selected .fluid-incomplete {
+  background-color: transparent;
+  border: 1px dashed saturate($red, 10%);
+  &.fluid-placeholder {
+    color: darken($red, 10%);
+  }
 }
