--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -345,7 +345,7 @@ since they are essentially both commands just acting upon different things. */
 }
 
 .toplevel.selected .fluid-incomplete {
-  border: 1px dashed saturate($red, 10%);
+  border-bottom: 1px dashed saturate($red, 10%);
   &.fluid-placeholder {
     color: darken($red, 10%);
   }
