--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -56,7 +56,7 @@ https://github.com/chriskempson/tomorrow-theme */
   $black: #1d1f21;
   $background: transparent;
   $selected-background: #2d2d2d;
-  $blanks: darken($toplevel-background, 20%);
+  $blanks: lighten($toplevel-background, 10%);
   $currentline: $black3;
   $selection: $grey3;
   $foreground: $white2;
@@ -340,13 +340,6 @@ since they are essentially both commands just acting upon different things. */
   display: none;
 }
 
-.toplevel.selected .fluid-empty.fluid-incomplete {
-  background-color: transparent;
-}
-
 .toplevel.selected .fluid-incomplete {
   border-bottom: 1px dashed saturate($red, 10%);
-  &.fluid-placeholder {
-    color: darken($red, 10%);
-  }
 }
