--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -360,9 +360,22 @@ $error-color: saturate($red, 10%);
 
 .toplevel.selected .fluid-incomplete {
   border-bottom: 1px dashed $error-color;
-  opacity: 1;
+  position: relative;
 
   &.is-origin:not(.cursor-on) {
     animation: blinkError 0.3s ease-in-out infinite;
+
+    &:hover {
+      &:after {
+        @extend .tooltip;
+        background-color: rgba(30, 30, 30, 0.8);
+        padding: 2px;
+        width: max-content;
+        content: " Source of incomplete ";
+        position: absolute;
+        top: -20px;
+        left: -5px;
+      }
+    }
   }
 }
