Rename other fluid uses of Thread to Pipe

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -224,7 +224,7 @@ https://github.com/chriskempson/tomorrow-theme */
     // removing position realtive. Removing background color. Something with z-index; Opacity too. Inline-block seems to work.
   }
 
-  .fluid-thread-pipe {
+  .fluid-pipe-symbol {
     color: $blue;
     font-size: 10px;
     top: -1px;
