Add support for Field Partials

--- a/client/src/styles/_fluid.scss
+++ b/client/src/styles/_fluid.scss
@@ -278,6 +278,7 @@ https://github.com/chriskempson/tomorrow-theme */
   }
 
   .fluid-partial,
+  .fluid-field-partial,
   .fluid-partial-right {
     color: $red;
   }
